<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80F436"
    tools:context=".PlayerSetup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="314dp"
        android:layout_height="64dp"
        android:layout_marginTop="88dp"
        android:text="@string/PlayerSetupTitle"
        android:textColor="#6AFFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:text="@string/Label1"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playerRedName"
        app:layout_constraintStart_toStartOf="@+id/playerRedName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="111dp"
        android:layout_height="21dp"
        android:text="@string/Label2"
        android:textColor="#0000FF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playerBlueName"
        app:layout_constraintStart_toStartOf="@+id/playerBlueName" />

    <EditText
        android:id="@+id/playerRedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/playerBlueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerRedName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/orange_button"
        android:onClick="submitButtonClick"
        android:text="@string/submitButton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerBlueName" />
</androidx.constraintlayout.widget.ConstraintLayout>